--- a/clintwin/sponsor/static/sponsor/css/trial_dashboard.css
+++ b/clintwin/sponsor/static/sponsor/css/trial_dashboard.css
@@ -96,7 +96,7 @@ body, html {
     display: inline-block;
     font-size: 18px;
     font-family: Helvetica Medium, sans-serif;
-    bottom: -8px;
+    bottom: -4px;
 }
 
 .sort-label{
@@ -104,7 +104,7 @@ body, html {
     display: inline-block;
     font-size: 18px;
     font-family: Helvetica Medium, sans-serif;
-    bottom: -8px;
+    bottom: -4px;
 }
 
 .hilite {
